# rit

./: .ritignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: add.rs  commit.rs  init.rs  log.rs  mod.rs  status.rs
