[package]
name = "rit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
